--- a/use/PidPluginUseSample/appsettings.json
+++ b/use/PidPluginUseSample/appsettings.json
@@ -3,6 +3,13 @@
     "BaseUrl": "https://server.com/api/",
     "TimeoutInMinutes": 1,
     "SubscriptionKey": "subscription-key",
-    "CacheExpirationInMinutes": 60
+    "RetryAttempts": 3,
+    "CacheSettings": {
+      "EntityDataBasicInMinutes": 10,
+      "EntityDataFullInMinutes": 10,
+      "SpecialRecordsInMinutes": 10,
+      "BankAccountDetailInMinutes": 10,
+      "BankAccountOwnershipInMinutes": 10
+    }
   }
 }
